[tool.poetry]
name = "pycrumbs"
version = "0.1.1"
description = "Tool for automatically storing information about Python processes."
authors = ["Chris Bridge <chrisbridge44@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CPBridge/pycrumbs"
homepage = "https://github.com/CPBridge/pycrumbs"
keywords = ["tracking", "vcs", "version control"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.7"
GitPython = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
flake8 = "3.7.7"
flake8-docstrings = "1.3.0"
flake8-polyfill = "1.0.2"
mccabe = "0.6.1"
mypy = "0.910"
mypy-extensions = "0.4.3"
types-setuptools = "57.4.0"
pep8-naming = "0.8.2"
py = "1.9.0"
pycodestyle = "2.5.0"
pydocstyle = "3.0.0"
pyflakes = "2.1.1"
ipython = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
