[tool.poetry]
name = "pycrumbs"
version = "0.4.0"
description = "Tool for automatically storing information about Python processes."
authors = ["Chris Bridge <chrisbridge44@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CPBridge/pycrumbs"
homepage = "https://github.com/CPBridge/pycrumbs"
keywords = ["tracking", "vcs", "version control"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.10"
GitPython = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
flake8 = "7.3.0"
flake8-docstrings = "1.7.0"
flake8-polyfill = "1.0.2"
mccabe = "0.7.0"
mypy = "1.19.0"
mypy-extensions = "1.1.0"
types-setuptools = "80.9.0.20250822"
pep8-naming = "0.15.1"
py = "1.9.0"
pycodestyle = "2.14.0"
pydocstyle = "6.3.0"
pyflakes = "3.4.0"
ipython = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
